fixed landing page overlapping

--- a/app/assets/stylesheets/components/_icon_card.scss
+++ b/app/assets/stylesheets/components/_icon_card.scss
@@ -9,6 +9,7 @@ svg {
   margin-left: 35px;
   height: 200px;
   width: 180px;
+  font-family: "Signika";
 }
 
 .icon_card:hover {
@@ -28,6 +29,7 @@ svg {
 .icon-text {
  color: rgb(79, 79, 79);
  text-align: center;
+ font-family: "Signika";
 }
 
 .icon-text:hover {
